examples/good/02-logical-operators.tx
fun main(): Void {
  printBool(true || false);
  printBool(true && false);

  printBool(!true);
  printBool(!false);

  printBool(4 >= 2 || 3 != 2);

  return;
}