examples/bad/02-comparison.tx
fun main(): Void {
  printInt(1 <=== 2);
  printInt(1 << 2);

  printInt(1 >>= 2);
  printInt(1 >< 2);

  printInt(1 === 2);
  printInt(1 ==! 1);
  printInt(1 !=! 2);

  return;
}
